--- a/app/locale/ja_JP/Mage_Catalog.csv
+++ b/app/locale/ja_JP/Mage_Catalog.csv
@@ -1,6 +1,8 @@
 "# of Use","# 使用中"
 "%1$s incl tax.","%1$s 税込"
-"%s - %s","%s - %s未満"
+"%s - %s","%s - %s"
+"%s Item(s)","%sアイテム"
+"%s and above","%s〜"
 "(%d)","(%d)"
 "(Copy data from: %s)","(コピーしています: %s)"
 "(Will make search for the query above return results for this search.)","(上記の検索クエリはこの検索結果を返します)"
@@ -157,9 +159,9 @@
 "Compare","比較する"
 "Compare Products","商品の比較"
 "Conditions Combination","条件の組み合わせ"
-"Configurable Product","設定可能商品"
+"Configurable Product","親SKU商品"
 "Configurable Product Settings","比較可能な商品設定"
-"Copy From Configurable","設定可能商品からコピー"
+"Copy From Configurable","親SKU商品からコピー"
 "Country/State","都道府県"
 "Create","作成"
 "Create (Upload)","作成 (アップロード)"
@@ -167,11 +169,11 @@
 "Create Permanent Redirect for old URL","古いURLに対する恒久的なリダイレクトを作成する"
 "Create Permanent Redirect for old URLs if Url key changed","URLキーが変更になると、古いURLに対するリダイレクトが作成されます。"
 "Create Product Settings","商品設定を作成する"
-"Create Simple Associated Product","子商品(シンプル商品)を作成"
+"Create Simple Associated Product","子商品(SKU商品)を作成"
 "Create new category","カテゴリの新規作成"
 "Create new product","商品の新規作成"
 "Cross-sells","推奨商品(抱き合わせ)"
-"Currently Shopping By","Currently Shopping By"
+"Currently Shopping by:","現在の絞込み条件："
 "Custom Design","カスタムデザイン"
 "Custom Options","カスタムオプション"
 "Customers Reviews","お客さまレビュー"
@@ -243,11 +245,11 @@
 "Get special price","特別価格を得る"
 "Global","全般"
 "Globally Editable","全体で編集可能"
-"Go to Home Page","ホームへ"
+"Go to Home Page","TOP PAGE"
 "Grid","グリッド"
 "Grouped Product","グループ商品"
 "Groups","グループ"
-"Home","ホーム"
+"Home","TOP"
 "ID","ID"
 "ID: %s","ID: %s"
 "If empty, the Product Name will be used","空白の場合は商品名が使用されます"
@@ -440,7 +442,7 @@
 "Quantity","個数"
 "Quick Create","クイック作成"
 "Quick Overview","商品の概要"
-"Quick simple product creation","クイックシンプル商品作成"
+"Quick simple product creation","クイックSKU商品作成"
 "Records for ""","""のレコード"
 "Redirect","リダイレクト"
 "Redirect URL","リダイレクトURL"
@@ -511,7 +513,7 @@
 "Show","表示"
 "Show Details","詳細を見る"
 "Show Tags","タグを見る"
-"Simple Product","シンプル商品"
+"Simple Product","SKU商品"
 "Site Map","サイトマップ"
 "Sitemap","サイトマップ"
 "Skip import row, is not valid value ""%s"" for field ""%s""","インポート業をスキップ、""%s""はフィールド""%s""で正しい値ではありません"
@@ -575,7 +577,7 @@
 "This attribute cannot be deleted.","この属性は削除されません。"
 "This attribute cannot be edited.","この属性は変更できません。"
 "This attribute cannot be updated.","属性を更新できません。"
-"This attribute is used in configurable products. You cannot remove it from the attribute set.","この属性は設定可能商品で使用されているため、属性セットから削除できません。"
+"This attribute is used in configurable products. You cannot remove it from the attribute set.","この属性は親SKU商品で使用されているため、属性セットから削除できません。"
 "This attribute no longer exists","この属性は存在していません。"
 "This attribute set no longer exists.","属性セットが存在していません。"
 "This group contains attributes, used in configurable products. Please move these attributes to another group and try again.","このグループは設定できる商品の中で使われた属性を含んでいます。これらの属性を他のグループに移し、もう一度試してください。"
@@ -625,7 +627,7 @@
 "Use In Search Results Layered Navigation","検索結果で階層ナビゲーションを使用する"
 "Use JavaScript Calendar","JavaScriptカレンダーを使用する"
 "Use Static URLs for Media Content in WYSIWYG for Catalog","カテゴリWYSIWIGエディタでメディアURLに静的URLを使用する"
-"Use To Create Configurable Product","設定可能商品を使って作成する"
+"Use To Create Configurable Product","親SKU商品を使って作成する"
 "Use Tree Like Category Sitemap","ツリー状のカテゴリサイトマップ"
 "Use default","デフォルト値を使用する"
 "Use for Promo Rule Conditions","プロモーションルールの条件で使用する"
