--- a/app/locale/ja_JP/Mage_Checkout.csv
+++ b/app/locale/ja_JP/Mage_Checkout.csv
@@ -40,6 +40,7 @@
 "Checkout as Guest","登録せずに購入"
 "Checkout as a Guest or Register","登録せずに購入または新規登録を選択してください"
 "Checkout with Multiple Addresses","複数の住所へ配送する"
+"Clear Shopping Cart","カートを空にする"
 "Click <a href=""%s"" onclick=""this.target='_blank'"">here to print</a> a copy of your order confirmation.","<a href=""%s"" onclick=""this.target='_blank'"">こちら</a>から注文確認書を印刷することができます。"
 "Click <a href=""%s"">here</a> to continue shopping.","<br /><button type=""button"" title=""買い物を続ける"" class=""button btn-continue"" onclick=""setLocation('%s')""><span><span>買い物を続ける</span></span></button>"
 "Condition Name","条件"
@@ -196,7 +197,7 @@
 "Unable to set Payment Method.","決済方法をセットできません。"
 "Unit Price","単価"
 "Update Qty &amp; Addresses","数量&amp;住所の更新"
-"Update Shopping Cart","ショッピングカートを更新"
+"Update Shopping Cart","カートを更新"
 "Update Total","合計更新"
 "Use Billing Address","ご注文者住所を使う"
 "We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress.","注文を処理しています、注文の詳細をメールでお送りします。また、注文が発送されると発送状況を確認できるURLを付けてもメールをお送ります。"
